--- a/sites/GoIt/react/goitflex/package.json
+++ b/sites/GoIt/react/goitflex/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "netflix",
+  "name": "goitflex",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://natalyVozna.github.io/goitflex/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "gh-pages": "^4.0.0",
     "movie-trailer": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
