--- a/sites/GoIt/react/goit-react-hw-06-phonebook/package.json
+++ b/sites/GoIt/react/goit-react-hw-06-phonebook/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
+    "nanoid": "^4.0.0",
+    "notiflix": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "predeploy": "npm run build",
