--- a/sites/GoIt/react/goit-react-hw-06-phonebook/package.json
+++ b/sites/GoIt/react/goit-react-hw-06-phonebook/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
