--- a/sites/GoIt/goitflix/package.json
+++ b/sites/GoIt/goitflix/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goitflix",
+  "name": "natflix",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://natalyVozna.github.io/goitflex/",
@@ -10,11 +10,15 @@
     "axios": "^1.2.0",
     "gh-pages": "^4.0.0",
     "movie-trailer": "^3.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-youtube": "^10.1.0",
     "sass": "^1.56.1",
+    "styled-components": "^5.3.6",
+    "styled-system": "^5.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
