--- a/sites/GoIt/goitflix/package.json
+++ b/sites/GoIt/goitflix/package.json
@@ -2,7 +2,7 @@
   "name": "natflix",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://natalyVozna.github.io/goitflex/",
+  "homepage": "https://natalyVozna.github.io/natflix/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
