--- a/sites/GoIt/react/goit-react-hw-07-phonebook/package.json
+++ b/sites/GoIt/react/goit-react-hw-07-phonebook/package.json
@@ -2,13 +2,14 @@
   "name": "goit-react-hw-07-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://natalyVozna.github.io/goit-react-hw-05-movies/",
+  "homepage": "https://natalyVozna.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
+    "axios": "^1.2.1",
     "formik": "^2.2.9",
     "install": "^0.13.0",
     "nanoid": "^4.0.0",
@@ -24,12 +25,11 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "eslintConfig": {
     "extends": [
